Change style + GridLayout bugfixes

--- a/style.css
+++ b/style.css
@@ -5,43 +5,82 @@
 }
 
 html, body {
-  font-family: 'sans-serif';
+  font-family: 'Droid Sans', 'Ubuntu Sans', 'sans serif';
   color: #333;
   margin: 0;
   height: 100%;
-  background-color: #f1f1f1;
-  padding: 5px 0px;
+  padding: 0;
 }
 
-#container {
-  float: left;
-  width: 100%;
+.page-wrap {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  height: 100%;
 }
 
-#menu {
-  float: left;
+.main-sidebar, .main-nav {
+  background-color: #BBBBBB;
+  -webkit-box-shadow: 0 0 2px 2px #ddd;
+  -webkit-box-shadow: 0 0 5px 5px #ddd;
+  box-shadow: 0 0 5px 5px #ddd;
+  z-index: 10;
+  padding: 0 5px;
+}
+
+.main-content {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  -webkit-box-ordinal-group: 2;
+  -moz-box-ordinal-group: 2;
+  -ms-flex-order: 2;
+  -webkit-order: 2;
+  order: 2;
+  background-color: #f7f7f7;
+  padding: 0 5px;
+}
+
+.main-nav {
   width: 250px;
+  -webkit-box-ordinal-group: 1;
+  -moz-box-ordinal-group: 1;
+  -ms-flex-order: 1;
+  -webkit-order: 1;
+  order: 1;
+}
+
+.main-sidebar {
+  width: 120px;
+  -webkit-box-ordinal-group: 3;
+  -moz-box-ordinal-group: 3;
+  -ms-flex-order: 3;
+  -webkit-order: 3;
+  order: 3;
+}
+
+button {
+  border: none;
+
 }
 
 #widgets {
-  float: right;
   width: 110px;
   padding: 5px;
   font-size: 10px;
 }
 
-#workspace {
-  overflow: auto;
+ab-grid > * {
+  background-color: #fff;
+  -webkit-box-shadow: 0 0 5px 2px rgba(0,0,0,0.1);
+  box-shadow: 0 0 5px 2px rgba(0,0,0,0.1);
 }
 
-.block {
-  display: block;
-  height: 100%;
-  border: 1px solid #fff;
-  background-color: #fafafa;
-  -webkit-box-shadow: 0 0 1px 0 #333;
-  box-shadow: 0 0 1px 0 #333;
-  padding: 5px;
-  margin: 0px 10px;
+#workspace {
+  overflow: auto;
 }
 
